new database and translation to spanish

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,82 @@
 <resources>
     <string name="app_name">Random Names App</string>
+
+        <string name="origin_African">African</string>
+        <string name="origin_Albanian">Albanian</string>
+        <string name="origin_Spanish">Spanish</string>
+        <string name="origin_Armenian">Armenian</string>
+        <string name="origin_Azerbaijani">Azerbaijani</string>
+        <string name="origin_Basque">Basque</string>
+        <string name="origin_Belarusian">Belarusian</string>
+        <string name="origin_Bengali">Bengali</string>
+        <string name="origin_Bosnian">Bosnian</string>
+        <string name="origin_Breton">Breton</string>
+        <string name="origin_Bulgarian">Bulgarian</string>
+        <string name="origin_Catalan">Catalan</string>
+        <string name="origin_Chinese">Chinese</string>
+        <string name="origin_Croatian">Croatian</string>
+        <string name="origin_Czech">Czech</string>
+        <string name="origin_Danish">Danish</string>
+        <string name="origin_Dutch">Dutch</string>
+        <string name="origin_English">English</string>
+        <string name="origin_Estonian">Estonian</string>
+        <string name="origin_Finnish">Finnish</string>
+        <string name="origin_French">French</string>
+        <string name="origin_Frisian">Frisian</string>
+        <string name="origin_Galician">Galician</string>
+        <string name="origin_Georgian">Georgian</string>
+        <string name="origin_German">German</string>
+        <string name="origin_Greek">Greek</string>
+        <string name="origin_Hausa">Hausa</string>
+        <string name="origin_Hawaiian">Hawaiian</string>
+        <string name="origin_Hebrew">Hebrew</string>
+        <string name="origin_Hungarian">Hungarian</string>
+        <string name="origin_Icelandic">Icelandic</string>
+        <string name="origin_Igbo">Igbo</string>
+        <string name="origin_Indian">Indian</string>
+        <string name="origin_Indonesian">Indonesian</string>
+        <string name="origin_Irish">Irish</string>
+        <string name="origin_Italian">Italian</string>
+        <string name="origin_Japanese">Japanese</string>
+        <string name="origin_Kazakh">Kazakh</string>
+        <string name="origin_Khmer">Khmer</string>
+        <string name="origin_Korean">Korean</string>
+        <string name="origin_Latvian">Latvian</string>
+        <string name="origin_Limburgish">Limburgish</string>
+        <string name="origin_Lithuanian">Lithuanian</string>
+        <string name="origin_Macedonian">Macedonian</string>
+        <string name="origin_Malay">Malay</string>
+        <string name="origin_Maori">Maori</string>
+        <string name="origin_Polish">Polish</string>
+        <string name="origin_Nepali">Nepali</string>
+        <string name="origin_Norwegian">Norwegian</string>
+        <string name="origin_Persian">Persian</string>
+        <string name="origin_Romanian">Romanian</string>
+        <string name="origin_Portuguese">Portuguese</string>
+        <string name="origin_Russian">Russian</string>
+        <string name="origin_Scottish">Scottish</string>
+        <string name="origin_Serbian">Serbian</string>
+        <string name="origin_Slovak">Slovak</string>
+        <string name="origin_Slovene">Slovene</string>
+        <string name="origin_Swahili">Swahili</string>
+        <string name="origin_Swedish">Swedish</string>
+        <string name="origin_Thai">Thai</string>
+        <string name="origin_Turkish">Turkish</string>
+        <string name="origin_Ukrainian">Ukrainian</string>
+        <string name="origin_Urdu">Urdu</string>
+        <string name="origin_Vietnamese">Vietnamese</string>
+        <string name="origin_Welsh">Welsh</string>
+        <string name="origin_Yoruba">Yoruba</string>
+        <string name="origin_Zulu">Zulu</string>
+    <string name="randomStr">Random Name</string>
+    <string name="maleStr">Masculine</string>
+    <string name="femaleStr">femaleStr</string>
+    <string name="generateStr">Generate Name</string>
+    <string name="nameGeneratorStr">Name Generator</string>
+    <string name="categoriesOriginsStr">Categories or Origins</string>
+    <string name="selectAllStr">Select All</string>
+    <string name="unselectAllStr">Unselect All</string>
+    <string name="genderStr">Gender</string>
+    <string name="eitherStr">Either</string>
+
 </resources>
