feat: Localize messages and improve user feedback
This commit introduces localization for "Select a category" and "No names found" messages, and updates the ViewModel to use string resources for user feedback.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -79,4 +79,6 @@
     <string name="unselectAllStr">Deseleccionar Todo</string>
     <string name="genderStr">Género</string>
     <string name="eitherStr">Unisex</string>
+    <string name="selectCatStr">Selecciona una categoría</string>
+    <string name="noNamesStr">No se encontraron nombres</string>
 </resources>
